<?xml version="1.0" encoding="utf-8"?>
<resources>

    <integer name="google_play_services_version">4323000</integer>

    <string name="app_name">Strip Footing</string>
    <string name="test_dev">958F9098E9770C291BE172A298855499</string>


    <dimen name="padvertop">5dip</dimen>
    <dimen name="paddingright">15dip</dimen>
    <dimen name="edittextwidth">80dip</dimen>
    <dimen name="edittextht">20dip</dimen>
    <dimen name="textht">12dip</dimen>
    <dimen name="textviewwidth">50dip</dimen>
    <dimen name="textviewwidth_loading">150dip</dimen>


    <!--UI strings-->
    <string name="c1_txt">c1</string>
    <string name="c2_txt">c2</string>
    <string name="b1_txt">b1</string>
    <string name="b2_txt">b2</string>
    <string name="Hb_txt">Hb</string>
    <string name="Df_txt">Df</string>
    <string name="Hf_txt">Hf</string>
    <string name="d0_txt">d0</string>
    <string name="dp_txt">dp</string>
    <string name="p0v_txt">P0v</string>
    <string name="p1v_txt">P1v</string>
    <string name="p0h_txt">P0h</string>
    <string name="p1h_txt">P1h</string>
    <string name="soilwt_txt">Wsoil</string>

    <!-- menu -->
    <string name="preferences_title_str">Preferences</string>
    <string name="About_str">About</string>

    <!-- SETTINGS -->
    <string name="UNIT">UNIT</string>
    <string name="SI">SI</string>
    <string name="Imperial">Imperial</string>
    <array name="units_array_entries">
        <item>@string/SI</item>
        <item>@string/Imperial</item>
    </array>


    <!-- preferences -->
    <string name="C1_PREF">C1</string>
    <string name="C2_PREF">C2</string>
    <string name="B1_PREF">B1</string>
    <string name="B2_PREF">B2</string>
    <string name="HB_PREF">HB</string>
    <string name="DF_PREF">DF</string>
    <string name="HF_PREF">HF</string>
    <string name="D0_PREF">D0</string>
    <string name="DP_PREF">DP</string>
    <string name="P0V_PREF">P0V</string>
    <string name="P0H_PREF">P0H</string>
    <string name="P1V_PREF">P1V</string>
    <string name="P1H_PREF">P1H</string>
    <string name="WSOIL_PREF">WSOIL</string>

    <string name="WIDTHPIXEL_PREF">WIDTHPIXEL_PREF</string>


    <!-- COLORS -->
    <color name="tab_text_color">#0000FF</color>
    <color name="spacer_color">#0000FF</color>
</resources>