<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/c1_text"
            android:text="@string/c1_txt"
            style="@style/textviewstyle"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" />

        <EditText
            android:id="@+id/c1_input"
            android:text="0.5"
            style="@style/editstyle"
            android:layout_toRightOf="@id/c1_text"
            android:layout_alignParentTop="true" />
        <EditText
            android:id="@+id/c2_in"
            android:text="0.5"
            style="@style/editstyle"
            android:layout_below="@id/c1_input"
            android:layout_alignRight="@id/c1_input" />

        <TextView
            android:id="@+id/c2_text"
            style="@style/textviewstyle"
            android:layout_alignBaseline="@id/c2_in"
            android:text="@string/c2_txt" />

        <EditText
            android:id="@+id/b1_input"
            android:text="6.0"
            style="@style/editstyle"
            android:layout_below="@id/c2_in"
            android:layout_alignRight="@id/c2_in" />

        <TextView
            android:id="@+id/b1_text"
            style="@style/textviewstyle"
            android:layout_alignBaseline="@id/b1_input"
            android:text="@string/b1_txt" />

        <EditText
            android:id="@+id/b2_in"
            android:text="1.5"
            style="@style/editstyle"
            android:layout_below="@id/b1_input"
            android:layout_alignRight="@id/b1_input" />

        <TextView
            android:id="@+id/b2_text"
            style="@style/textviewstyle"
            android:layout_alignBaseline="@id/b2_in"
            android:text="@string/b2_txt" />

        <EditText
            android:id="@+id/Hb_input"
            android:text="0.3"
            style="@style/editstyle"
            android:layout_below="@id/b2_in"
            android:layout_alignRight="@id/b2_in" />


        <TextView
            android:id="@+id/Hb_text"
            android:text="@string/Hb_txt"
            style="@style/textviewstyle"
            android:layout_alignBaseline="@id/Hb_input" />

        <EditText
            android:id="@+id/Df_input"
            android:text="0.6"
            style="@style/editstyle"
            android:layout_below="@id/Hb_input"
            android:layout_alignRight="@id/b2_in" />

        <TextView
            android:id="@+id/Df_text"
            android:text="@string/Df_txt"
            style="@style/textviewstyle"
            android:layout_alignBaseline="@id/Df_input" />

        <EditText
            android:id="@+id/Hf_input"
            android:text="0.4"
            style="@style/editstyle"
            android:layout_below="@id/Df_input"
            android:layout_alignRight="@id/b2_in" />


        <TextView
            android:id="@+id/Hf_text"
            android:text="@string/Hf_txt"
            style="@style/textviewstyle"
            android:layout_alignBaseline="@id/Hf_input" />


        <EditText
            android:id="@+id/d0_input"
            android:text="1.5"
            style="@style/editstyle"
            android:layout_below="@id/Hf_input"
            android:layout_alignRight="@id/b2_in" />

        <TextView
            android:id="@+id/d0_text"
            android:text="@string/d0_txt"
            style="@style/textviewstyle"
            android:layout_alignBaseline="@id/d0_input" />

        <EditText
            android:id="@+id/dp_input"
            android:text="3.0"
            style="@style/editstyle"
            android:layout_below="@id/d0_input"
            android:layout_alignRight="@id/b2_in" />

        <TextView
            android:id="@+id/dp_text"
            android:text="@string/dp_txt"
            style="@style/textviewstyle"
            android:layout_alignBaseline="@id/dp_input" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sf"
            android:layout_toRightOf="@id/b2_in" />


        <!-- LOADING -->
        <View
            android:id="@+id/spacer"
            android:background="@color/edittextbackground"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_below="@+id/dp_input" />

        <EditText
            android:id="@+id/P0v_input"
            android:text="100"
            style="@style/editstyle"
            android:layout_below="@id/spacer"
            android:layout_alignRight="@id/dp_input" />


        <TextView
            android:id="@+id/P0v_text"
            android:text="@string/p0v_txt"
            style="@style/textviewstyle"
            android:layout_alignBaseline="@id/P0v_input" />

        <EditText
            android:id="@+id/P0h_input"
            android:text="0.0"
            style="@style/editstyle"
            android:layout_below="@id/P0v_input"
            android:layout_alignRight="@id/dp_input" />

        <TextView
            android:id="@+id/P0h_text"
            android:text="@string/p0h_txt"
            style="@style/textviewstyle"
            android:layout_alignBaseline="@id/P0h_input" />

        <EditText
            android:id="@+id/P1v_input"
            android:text="0.0"
            style="@style/editstyle"
            android:layout_below="@id/P0h_input"
            android:layout_alignRight="@id/P0h_input" />

        <TextView
            android:id="@+id/P1v_text"
            android:text="@string/p1v_txt"
            style="@style/textviewstyle"
            android:layout_alignBaseline="@id/P1v_input" />


        <EditText
            android:id="@+id/P1h_input"
            android:text="0.0"
            style="@style/editstyle"
            android:layout_below="@id/P1v_input"
            android:layout_alignRight="@id/P1v_input" />


        <TextView
            android:id="@+id/P1h_text"
            android:text="@string/p1h_txt"
            style="@style/textviewstyle"
            android:layout_alignBaseline="@id/P1h_input" />

        <EditText
            android:id="@+id/wtsoil_input"
            android:text="0.0"
            style="@style/editstyle"
            android:layout_below="@id/P1h_input"
            android:layout_alignRight="@id/P1h_input" />

        <TextView
            android:id="@+id/wtsoil_text"
            android:text="@string/soilwt_txt"
            style="@style/textviewstyle"
            android:layout_alignBaseline="@id/wtsoil_input" />


    </RelativeLayout>

</ScrollView>




